added help command. Mostly fixed rank and winrate search. Still need to refine error handling in rank. Updated readme with contact. Command service builds help embedbuilder for quick responding. Need to build finer help commands to allow better help searching. Consider implementing a Summoner info storage in a static data structure.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,11 @@
                 "build",
                 "${workspaceFolder}/YunoBot.csproj"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
