updated readme. Changed default prefix in config file to reflect values in readme

--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
     "botToken": "yourToken",
     "clientSecret": "yourSecret",
     "clientId": -1,
-    "prefix": "*",
+    "prefix": "`",
     "logLevel": 3
 }
