--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 *.sln.docstates
 *tokenfile
 *config
-
+*.lol
+ 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -345,3 +346,4 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
